[gd_scene load_steps=58 format=2]

[ext_resource path="res://Final Taiga Forest/baner.png" type="Texture" id=1]
[ext_resource path="res://stringstar fields/tileset.png" type="Texture" id=2]
[ext_resource path="res://Scenes/ButterChicken.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SteaknCheese.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/MainHUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/WorldComplete.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/MincePie.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Snail.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/MincePie.gd" type="Script" id=10]
[ext_resource path="res://Scripts/ButterChicken.gd" type="Script" id=11]
[ext_resource path="res://Photos/Cat Sprite Sheet.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Bat.tscn" type="PackedScene" id=13]
[ext_resource path="res://Photos/Coin01.mp3" type="AudioStream" id=14]
[ext_resource path="res://Scenes/BorderDialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/WelcomeDialog.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scripts/World2.gd" type="Script" id=17]

[sub_resource type="Animation" id=7]
resource_name = "Left&Right"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 79, 183 ), Vector2( 329, 183 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 79, 183 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "Left&Right"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 597, 89 ), Vector2( 510, 89 ) ]
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 597, 89 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "Left&Right"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 598, 42 ), Vector2( 319, 42 ) ]
}

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 598, 42 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.5, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 137, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 351.5, 4.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 2.5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 36, 105 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Up&Down"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 36, 105 ), Vector2( 36, 229 ), Vector2( 36, 361 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Circle"

[sub_resource type="Animation" id=10]
resource_name = "Left&Right"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 216, 104 ), Vector2( 295, 104 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 216, 104 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 24, 2 )

[sub_resource type="Animation" id=13]
resource_name = "Circle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2.5, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 544, 133 ), Vector2( 576, 103 ), Vector2( 545, 71 ), Vector2( 512, 102 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Left&Right"

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 102 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Circle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2.5, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 384, 104 ), Vector2( 416, 72 ), Vector2( 448, 104 ), Vector2( 416, 136 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Left&Right"

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 384, 104 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Circle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2.5, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 416, 72 ), Vector2( 448, 104 ), Vector2( 416, 136 ), Vector2( 384, 104 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Left&Right"

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 384, 104 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Circle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2.5, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 104 ), Vector2( 416, 136 ), Vector2( 384, 104 ), Vector2( 416, 72 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "Left&Right"

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 384, 104 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "Circle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2.5, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 416, 136 ), Vector2( 384, 104 ), Vector2( 416, 72 ), Vector2( 448, 104 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "Left&Right"

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 384, 104 ) ]
}

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 0, 200, 32, 40 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 12 )
region = Rect2( 32, 200, 32, 40 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 12 )
region = Rect2( 64, 200, 32, 40 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 12 )
region = Rect2( 96, 200, 32, 40 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 12 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 12 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 12 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 12 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "Licking",
"speed": 5.0
} ]

[node name="World2" type="Node2D"]
script = ExtResource( 17 )

[node name="Baner" type="Sprite" parent="."]
modulate = Color( 0.32549, 0.313726, 0.313726, 1 )
position = Vector2( -331, 153 )
texture = ExtResource( 1 )

[node name="Baner2" type="Sprite" parent="."]
modulate = Color( 0.32549, 0.313726, 0.313726, 1 )
position = Vector2( 1653, 153 )
texture = ExtResource( 1 )
flip_h = true

[node name="WorldComplete" parent="." instance=ExtResource( 7 )]
position = Vector2( 112, 81 )
next_world = "res://Scenes/CompletedScene.tscn"

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 60, 60 )

[node name="ButterChicken" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 369, 387 )
scale = Vector2( 0.181, 0.211 )
script = ExtResource( 11 )

[node name="MincePie" parent="." instance=ExtResource( 8 )]
position = Vector2( 540, 92 )
scale = Vector2( 0.181, 0.212 )
script = ExtResource( 10 )

[node name="SteaknCheese" parent="." instance=ExtResource( 4 )]
position = Vector2( 261, 190 )
scale = Vector2( 0.101, 0.131 )

[node name="MainHUD" parent="." instance=ExtResource( 5 )]

[node name="Bat" parent="." instance=ExtResource( 13 )]
position = Vector2( 79, 183 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bat"]
autoplay = "Left&Right"
anims/Left&Right = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Bat2" parent="." instance=ExtResource( 13 )]
position = Vector2( 597, 89 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bat2"]
autoplay = "Left&Right"
anims/Left&Right = SubResource( 30 )
anims/RESET = SubResource( 31 )

[node name="Bat3" parent="." instance=ExtResource( 13 )]
position = Vector2( 598, 42 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bat3"]
autoplay = "Left&Right"
anims/Left&Right = SubResource( 28 )
anims/RESET = SubResource( 29 )

[node name="BorderDialog" parent="." instance=ExtResource( 15 )]
position = Vector2( 1, 284 )

[node name="BorderDialog2" parent="." instance=ExtResource( 15 )]
position = Vector2( 643, 288 )

[node name="WelcomeDialog" parent="." instance=ExtResource( 16 )]
position = Vector2( 65, 96 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 61, 87 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
position = Vector2( 44.5, 12 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Floor2" type="Sprite" parent="."]
position = Vector2( 209, 217 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Floor2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2/StaticBody2D"]
position = Vector2( -8, 7 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Floor3" type="Sprite" parent="."]
position = Vector2( 443, 333 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Floor3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor3/StaticBody2D"]
position = Vector2( -91.5, 9.5 )
shape = SubResource( 3 )
one_way_collision = true

[node name="Platform" type="KinematicBody2D" parent="."]
position = Vector2( 36, 105 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Platform"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 64, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2( 0, -5.5 )
shape = SubResource( 4 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform"]
autoplay = "Up&Down"
anims/RESET = SubResource( 5 )
anims/Up&Down = SubResource( 6 )

[node name="Platform2" type="KinematicBody2D" parent="."]
position = Vector2( 216, 104 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform2"]
root_node = NodePath("../Sprite")
autoplay = "Left&Right"
anims/Circle = SubResource( 9 )
anims/Left&Right = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="Platform2"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 64, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Platform3" type="KinematicBody2D" parent="."]
position = Vector2( 512, 102 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform3"]
root_node = NodePath("../Sprite")
autoplay = "Circle"
anims/Circle = SubResource( 13 )
anims/Left&Right = SubResource( 14 )
anims/RESET = SubResource( 15 )

[node name="Sprite" type="Sprite" parent="Platform3"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 64, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform3"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Platform4" type="KinematicBody2D" parent="."]
position = Vector2( 384, 104 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform4"]
root_node = NodePath("../Sprite")
autoplay = "Circle"
anims/Circle = SubResource( 16 )
anims/Left&Right = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="Sprite" type="Sprite" parent="Platform4"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 64, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform4"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Platform5" type="KinematicBody2D" parent="."]
position = Vector2( 384, 104 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform5"]
root_node = NodePath("../Sprite")
autoplay = "Circle"
anims/Circle = SubResource( 19 )
anims/Left&Right = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="Sprite" type="Sprite" parent="Platform5"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 64, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform5"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Platform6" type="KinematicBody2D" parent="."]
position = Vector2( 384, 104 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform6"]
root_node = NodePath("../Sprite")
autoplay = "Circle"
anims/Circle = SubResource( 22 )
anims/Left&Right = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="Sprite" type="Sprite" parent="Platform6"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 64, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform6"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Platform7" type="KinematicBody2D" parent="."]
position = Vector2( 384, 104 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform7"]
root_node = NodePath("../Sprite")
autoplay = "Circle"
anims/Circle = SubResource( 25 )
anims/Left&Right = SubResource( 26 )
anims/RESET = SubResource( 27 )

[node name="Sprite" type="Sprite" parent="Platform7"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 64, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform7"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Snail" parent="." instance=ExtResource( 9 )]

[node name="Bebi" type="AnimatedSprite" parent="."]
position = Vector2( 111, 73 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 42 )
animation = "Licking"
frame = 3
playing = true
flip_h = true

[node name="Coverup" type="Sprite" parent="."]
position = Vector2( 122, 233 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 80, 16 )

[node name="Coverup2" type="Sprite" parent="."]
position = Vector2( 122, 350 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 80, 16 )

[node name="Coverup3" type="Sprite" parent="."]
position = Vector2( 236, 350 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 80, 16 )

[node name="Coverup4" type="Sprite" parent="."]
position = Vector2( 350, 350 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 80, 16 )

[node name="Coverup5" type="Sprite" parent="."]
position = Vector2( 465, 350 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 80, 16 )

[node name="Coverup6" type="Sprite" parent="."]
position = Vector2( 579, 350 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 80, 16 )

[node name="Coverup7" type="Sprite" parent="."]
position = Vector2( 237, 233 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 80, 16 )

[node name="Coverup8" type="Sprite" parent="."]
position = Vector2( 317, 233 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 128, 64, 32, 16 )

[node name="Coverup9" type="Sprite" parent="."]
position = Vector2( 106.16, 107 )
scale = Vector2( 1.27623, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 64, 16 )

[node name="Coverup10" type="Sprite" parent="."]
position = Vector2( 36, 350 )
scale = Vector2( 1.42747, 1.42747 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 48, 16 )

[node name="PickedUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = 10.0

[connection signal="body_entered" from="ButterChicken" to="ButterChicken" method="_on_ButterChicken_body_entered"]
[connection signal="body_entered" from="SteaknCheese" to="SteaknCheese" method="_on_SteaknCheese_body_entered"]
